full stack functionality and end to end testing